[tool.poetry]
name = "TravelAgent"
version = "0.1.0"
description = "A travel agent that helps you plan your trips"
authors = ["Jenna Goodrich"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
streamlit = "1.40.0"
python-dotenv = "^1.0.1"
langchain = "^0.3,<0.4"
langchain-community = "^0.3,<0.4"
langchain-anthropic = "^0.2,<0.3"
amadeus = ">=1.0"